Fri Jul 06 01:55:27 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.c: Correct checks for chooser greeter binaries, and
	  fix Suspend feature

	* daemon/gdm.[ch], daemon/misc.[ch], gui/misc.[ch], daemon/server.c,
	  daemon/slave.c, gui/gdmconfig.c, gui/gdmlogin.c: Use popt for
	  splitting argv's, this makes things understand quotes which are
	  apparently already used in places (eek).  This underlines the need
	  for the vicious-extentions-module, I just cut and paste too much
	  code.  Watch for this new cvs module soon.

	* daemon/slave.c: fix code for sessions with spaces in them

Thu Jul 05 23:45:45 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.c: open 0,1,2 with correct rw flag

	* daemon/slave.c: Ryan Murray pointed me to some of my braindamage
	  which was causing gdm to fail in horrible ways on debian.  Get rid
	  of the greeter FILE * which caused us to close fd 0 at one point
	  which then caused us to prematurely close our X connection.  We
	  just use stdin now, which makes more sense.

Thu Jul 05 18:50:23 2001  George Lebl <jirka@5z.com>

	* gdm.spec.in: remove the connection to RedHat's default init as that
	  just does some background setting but we already set background
	  ourselves in a nicer way and this just resulted in a slowdown and
	  a flash

	* daemon/server.c, daemon/slave.c: be more thorough in closing
	  displays, never include an empty xioerror handler, and normally
	  xio errors do a DISPLAY_REMANAGE and only on server startup do they
	  do XFAILED.  Also before and after whacking clients grab/ungrab the
	  server as xdm does.

	* daemon/xdmcp.c: fix warnings

Thu Jul 05 13:17:53 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: add kill_thingies to atexit to make sure that the
	  background thing gets killed on X errors

Thu Jul 05 03:29:01 2001  George Lebl <jirka@5z.com>

	* configure.in: raise version to 2.2.3.1

	* gdm.spec.in: do a "soft restart" in %post

	* gui/gdmchooser.c, gui/gdmlogin.c: warning fixes
