@@ -1,3 +1,7 @@
+Fri Jul 06 04:25:39 2001  George Lebl <jirka@5z.com>
+
+	* daemon/slave.c: Fix fd leak after dup2
+
 Fri Jul 06 01:55:27 2001  George Lebl <jirka@5z.com>
 
 	* daemon/gdm.c: Correct checks for chooser greeter binaries, and
